Uploaded image for project: 'Geode'
  1. Geode
  2. GEODE-7203

C++ examples need to be updated

    XMLWordPrintableJSON

Details

    Description

      After reviewing the C++ native client examples I found several problems:

      1. Transaction - README should be updated to indicate random output; currently it says to expect the following output, but this will be different each time: Created cache

             Created region 'exampleRegion'

             Rolled back transaction - retrying(4)

             Rolled back transaction - retrying(3)

             Rolled back transaction - retrying(2)

             Committed transaction - exiting

      1. functionexecution - this is the only example that spins up a server named 'the-server'; the startserver.sh script should be updated to reflect the same name used in all other examples 'server'.
      2. pdxserializable - either the README needs to change to show the actual output of running the client app, or main.cpp should be changed to produce the same output presented in the README. The second get (of Customer2) is currently not formatted for printing like the first get (of Customer1).
      3. All examples: stopserver.sh should cleanup leftover directories locator/, server/, and any *.gfs. If there is any reason to keep these around for failing tests, then a separate cleanup.sh script should do this.
      4. authinitialize - startserver.sh fails due to extra spaces around '=' when setting RESOLVEDPATH and AUTHENTICATOR. This example also fails to run, instead hangs when executing getCredentials, but this was filed as GEODE-7198.

      Attachments

        Activity

          People

            alberto.bustamante.reyes Alberto Bustamante Reyes
            dhardman Diane Hardman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h 20m
                1h 20m