GEODE-7203: Some updates in examples