examples/cpp/remotequery/stopserver.ps1
@@ -37,3 +37,6 @@ if ($GFSH_PATH -ne "")
 {
    Invoke-Expression "$GFSH_PATH -e 'connect' -e 'destroy region --name=custom_orders' -e 'stop server --name=server' -e 'stop locator --name=locator'"
 }
+
+Remove-Item -Path locator -Recurse -Force
+Remove-Item -Path server -Recurse -Force
