examples/cpp/sslputget/stopserver.ps1
@@ -37,3 +37,6 @@ if ($GFSH_PATH -ne "")
 {
    Invoke-Expression "$GFSH_PATH -e 'connect --use-ssl=true --key-store=$PSScriptRoot\ServerSslKeys\server_keystore.jks --trust-store=$PSScriptRoot\ServerSslKeys\server_truststore.jks --trust-store-password=gemstone --key-store-password=gemstone' -e 'shutdown --include-locators=true'"
 }
+
+Remove-Item -Path locator -Recurse -Force
+Remove-Item -Path server -Recurse -Force
