examples/cpp/sslputget/stopserver.sh
@@ -32,3 +32,4 @@ BASEDIR="$( cd "$( dirname "$0" )" && pwd )"
 
 $GFSH_PATH  -e "connect --use-ssl=true --key-store=${BASEDIR}/ServerSslKeys/server_keystore.jks --trust-store=${BASEDIR}/ServerSslKeys/server_truststore.jks --trust-store-password=gemstone --key-store-password=gemstone" -e "shutdown --include-locators=true"
 
+rm -rf locator server
