examples/cpp/transaction/README.md
@@ -37,7 +37,7 @@ existing key while showing how to handle exceptions.
     $ ./startserver.sh
     ```
 
-3. Execute `cpp-transaction`. Expect the following output:
+3. Execute `cpp-transaction`. The output will show the cache and region creation, up to five rolled back transactions, and finally the commit of the transaction if the maximum of five rollback were not executed. For example:
 
     ```bash
     $ ./cpp-transaction
@@ -47,6 +47,17 @@ existing key while showing how to handle exceptions.
        Rolled back transaction - retrying(3)
        Rolled back transaction - retrying(2)
        Committed transaction - exiting
+    ```
+    
+    ```bash
+    $ ./cpp-transaction
+       Created cache
+       Created region 'exampleRegion'
+       Rolled back transaction - retrying(4)
+       Rolled back transaction - retrying(3)
+       Rolled back transaction - retrying(2)
+       Rolled back transaction - retrying(1)
+       Rolled back transaction - retrying(0)       
     ```
 
 4. Run the `stopserver` script to gracefully shutdown the Geode cluster.
